results/SVCOMP/0-shot/log-boundcheck30-2024_03_19_00_33_20.txt
public class boundcheck30 {

  //@ requires i >= 0;
  //@ ensures i >= 0;
  private static void recursion(int i) {
    //@ loop_invariant i >= 0;
    //@ decreases i;
    if (i == 0) {
      return;
    }
    if (i > 0) {
      recursion(i - 1);
    }
    if (i < 0) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/boundcheck30.java:6: error: Loop specifications must immediately precede a loop statement
    //@ loop_invariant i >= 0;
        ^
1 error

